gap fixed

--- a/style/work.css
+++ b/style/work.css
@@ -224,7 +224,9 @@ body {
     }
 
     .heading {
+        margin-top: 15px;
         font-size: 18px;
+        margin-bottom: 16px;
     }
 
     .item-container {
@@ -235,7 +237,7 @@ body {
     }
 
     .page-list {
-        gap: 25px;
+        gap: 20px;
     }
 
     .page-list li {
